新增语音转文字界面

--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/test/test",
     "pages/passages/passages",
     "pages/community/community",
-    "pages/myself/myself"
+    "pages/myself/myself",
+    "pages/speechToText/speechToText"
   ],
   "subpackages": [
     {
